# paathguide

./: .gitattributes  .gitignore  API_README.md  Brewfile  LICENSE  Milestones.md  README.md  ROADMAP.md  architecture.plantuml  pyproject.toml  run_server.py  test.text  test_api.py  test_duplicate.py  test_fuzzy_search.py  test_fuzzy_search_new.py
paathguide/: api.py  cleaning.py  cli.py  data_loader.py  fuzzy_search.py  repository.py  schemas.py  text_cleaner.py
paathguide/audio_transcribe_tests/: record_audio.py  vaakyansh_pa.py  whisper_med_pa.py
paathguide/db/: data_loader.py  models.py  repository.py  schemas.py
paathguide/db_helper/: models.py  schemas.py
paathguide/search/: fuzzy_search.py
paathguide/transcribe/: vaakyansh_pa.py  whisper_turbo_pa.py
paathguide/transcribe_helper/: vaakyansh_pa.py  whisper_turbo_pa.py
