[project]
name = "paathguide"
version = "0.1.0"
description = ""
authors = [{ name = "ArmanGrewal007", email = "armansinghgrewal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi (>=0.116.1,<0.117.0)",
  "uvicorn (>=0.35.0,<0.36.0)",
  "matplotlib (>=3.10.6,<4.0.0)",
  "scipy (>=1.16.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# brew install llvm
