# [tool.poetry]
# package-mode = false

[project]
name = "paathguide"
version = "0.1.0"
description = ""
authors = [{ name = "ArmanGrewal007", email = "armansinghgrewal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic (>=1.16.5,<2.0.0)",
  "click (>=8.2.1,<9.0.0)",
  # "datasets (>=4.0.0,<5.0.0)",
  # "editdistance (>=0.8.1,<0.9.0)",
  # "einops (>=0.8.1,<0.9.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  # "hydra-core (>=1.3.0,<2.0.0)",
  # "ipython (>=9.5.0,<10.0.0)",
  # "jiwer (>=4.0.0,<5.0.0)",
  # "jupyter (>=1.1.1,<2.0.0)",
  # "lhotse (>=1.0.0,<2.0.0)",
  # "librosa (>=0.11.0,<0.12.0)",
  # "lightning (>=2.0.0,<3.0.0)",
  "llvmlite (==0.44.0)",
  # "matplotlib (>=3.10.6,<4.0.0)",
  # "nemo-toolkit (>=2.4.0,<3.0.0)",
  # "notebook (>=7.4.5,<8.0.0)",
  # "numba (==0.61.2)",
  # "omegaconf (>=2.3.0,<3.0.0)",
  "openai-whisper (==20250625)",
  # "pandas (>=2.3.2,<3.0.0)",
  # "pyannote-core (>=5.0.0,<6.0.0)",
  # "pyannote-metrics (>=3.2.1,<4.0.0)",
  "pyaudio (>=0.2.14,<0.3.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  # "webdataset (>=1.0.2,<2.0.0)"
  "python-docx (>=1.2.0,<2.0.0)",
  "sqlalchemy (>=2.0.43,<3.0.0)",
  # "scipy (>=1.16.1,<2.0.0)",
  # "sentencepiece (>=0.2.1,<0.3.0)",
  # "soundfile (>=0.13.1,<0.14.0)",
  # "torch (>=2.8.0,<3.0.0)",
  # "torchaudio (>=2.8.0,<3.0.0)",
  # "transformers (>=4.56.0,<5.0.0)",
  "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
